# net-care-agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  HANDOFF.md  INVARIANTS.md  README.md  SECURITY.md  app.py  net_agent.py  pyproject.toml  requirements.txt  startup.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: security.yml  test.yml
Scripts/: check_sensitive_patterns.py  deploy.ps1  eval_harness.py  run_local.ps1  seed_test_profile.py
agent/: __init__.py  backups.py  chat.py  classify.py  cli.py  config.py  deep_sweep.py  exec_summary.py  intake.py  io.py  job_runtime.py  judgments.py  llm.py  logging_config.py  migrations.py  orchestrator.py  pdf_extract_helper.py  profile.py  provenance.py  questions.py  recovery.py  schema.py  serialize.py  trials_poll.py  verify.py
agent/tools/: __init__.py  biomarkers.py  clinical_trials.py  pubmed.py
docs/: architecture.excalidraw  architecture.md  evaluation_gate.md  operating_manual.md  profile_schema.md
eval_cases/synthetic/: allergy-distractor.json  ambiguous-dose.json  appointment-cancelled.json  appointment-oncology.json  appointment-scan.json  (+35 more)
static/: app.js  index.html  styles.css
tests/: _llm_fake.py  conftest.py  test_accuracy_guards.py  test_atomic_and_backups.py  test_biomarker_trends.py  test_changes.py  test_changes_added_at.py  test_chat.py  test_classify.py  test_deep_sweep.py  test_deploy_script.py  test_eval_harness.py  test_exec_summary.py  test_frontend_security.py  test_hardening_runtime.py  test_health.py  test_intake.py  test_intake_verify.py  test_invariants.py  test_job_reconciliation.py  test_judgments.py  test_judgments_override.py  test_llm.py  test_migrations.py  test_orchestrator.py  test_phase1_containment.py  test_profile.py  test_prompt_caching.py  test_prompt_rendering.py  test_provenance_review.py  test_questions.py  test_recovery.py  test_relevance.py  test_reliability.py  test_requirements_lock.py  test_schema.py  test_symptoms.py  test_timeline_appointments.py  test_tool_dispatch.py  test_treatment_matching.py  (+2 more)
(+3 files in other folders)
