[project]
name = "net-care-agent"
version = "0.1.0"
description = "NET/Care Research Agent — multi-agent AI system for monitoring NET cancer treatment options"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic==0.115.0",
    "flask==3.1.3",
    "gunicorn==25.3.0",
    "httpx==0.28.1",
    "pdfplumber==0.11.9",
    "pydantic==2.13.3",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "responses==0.26.0",
    "freezegun==1.5.5",
    "ruff==0.15.12",
]

[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "net_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter
